# xray_monitor

./: .gitignore  build.sh  install.sh  pyproject.toml
.claude/: settings.local.json
go/: Makefile  go.mod  go.sum  install.sh
go/cmd/xray-monitor/: main.go
go/internal/config/: config.go
go/internal/geoip/: geoip.go
go/internal/logtail/: logtail.go
go/internal/sni/: classify.go
go/internal/stats/: collector.go
go/internal/storage/: storage.go
go/internal/sysinfo/: sysinfo.go
go/internal/tui/: app.go  connections.go  dashboard.go  keys.go  logs.go  management.go  styles.go  system.go
go/internal/xcrypto/: x25519.go
go/internal/xray/: manager.go
go/internal/xrpc/: client.go
scripts/: xray_log_collector.py
src/xray_monitor/: DataTypes.py  __init__.py  __main__.py  app.py  config.py  constants.py  crypto.py  geoip.py  grpc_client.py  proto.py  stats.py  utils.py  widgets.py  xray_manager.py
src/xray_monitor/modules/: config.py  crypto.py  geoip.py  grpc_client.py  ip_registry.py  log_tail.py  proto.py  sni_radar.py  stats.py  sys_stats.py  traffic_log.py  xray_manager.py
src/xray_monitor/panels/: connections.py  dashboard.py  ip_radar.py  keys.py  logs.py  management.py  system.py
src/xray_monitor/widgets/: __init__.py  components.py  confirm_modal.py  qr_modal.py  styles.py
